--- a/MANHammerStudios/Content/Styles/galleryStyle.css
+++ b/MANHammerStudios/Content/Styles/galleryStyle.css
@@ -59,7 +59,6 @@
 
     .close:hover,
     .close:focus {
-        color: #999;
         text-decoration: none;
         cursor: pointer;
     }
@@ -74,10 +73,11 @@
 .next {
     cursor: pointer;
     position: absolute;
-    top: 30%;
+    top: 20%;
+    vertical-align: middle;
+    height: auto;
     width: auto;
     padding: 16px;
-    margin-top: -50px;
     color: white;
     background-color: rgba(0, 0, 0, 0.7);
     font-weight: bold;
@@ -152,7 +152,6 @@ img.hover-shadow {
 
 .modWrapper {
     padding: 0px;
-    width: 820px;
     height: auto;
     margin: auto;
     overflow: hidden;
@@ -198,7 +197,6 @@ h1 {
     .image-caption h1 {
         padding: 45px 0px 5px 0px;
         text-align: center;
-        margin-left: -15px;
         text-transform: uppercase;
         font-family: 'Indie Flower', cursive;
         font-size: 25px;
@@ -218,30 +216,23 @@ h1 {
 
 /* media queries */
 
-@media all and (min-width: 0px) and (max-width: 520px) {
-    .modWrapper {
-        width: 100%;
-        height: 100%;
-        padding: 0px 70px
-    }
-}
-
-@media all and (min-width: 521px) and (max-width: 700px) {
+@media screen and (max-width: 767px) {
     .modWrapper {
         width: 100%;
         height: 100%;
     }
-
+    .image-caption h1 {
+        padding: 35px 0px 5px 0px;
+        margin-left: -35%;
+        font-size: 20px;
+    }
     .image-container {
-        float: left;
-        width: 48%;
-        margin: 5px;
-        overflow: hidden;
-        position: relative;
+        width: 100%;
     }
-
-    .image-caption {
-        width: 250px;
-        height: 200px;
+    .next, .prev{
+        top: 3.5%;
+    }
+    .column {
+        width: 100%;
     }
 }
